logs/Slang/chapter-8/8.26.6.1--name_conflict_resolved.sv.log
name: name_conflict_resolved
description: resolved interface class method name conflict
should_fail: 0
tags: 8.26.6.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv:12:2: error: language feature not yet supported
	interface class itest;
	^~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv:16:2: error: language feature not yet supported
	class Hello implements ihello, itest;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv:22:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.1--name_conflict_resolved.sv:25:9: error: language feature not yet supported
		obj = new;
		      ^~~
